examples/c/error-codes/violates-constraint/nonfatal/CV-CDI5-bad-static.output
CV-CDI5-bad-static.c:1:1: error: Unexpected compound initializer (possibly attempting to directly initialize an anonymous member).

    Constraint violation (CV-CDI5):
        see C11 section 6.7.9:2 http://rvdoc.org/C11/6.7.9
        see C11 section 6.7.9:9 http://rvdoc.org/C11/6.7.9
        see CERT-C section MSC40-C http://rvdoc.org/CERT-C/MSC40-C
        see MISRA-C section 8.1:1 http://rvdoc.org/MISRA-C/8.1

