examples/c/error-codes/violates-constraint/nonfatal/CV-CDI5-bad-static.c
struct {
      struct {
            int v;
      };
} s = { { .v = 2, 3 } };

int main(void) {
      return s.v;
}

